--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "cookie-popup-gdpr",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Simple lightweight EU, GDPR cookie popup.",
-  "main": "popup.js",
+  "main": "dist/popup.js",
+  "types": "dist/popup.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
